--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <h1>Croiisant🥐</h1>
+    <h1>Contact us</h1>
     <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
+      To contact croissant.com, please email us at
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
     <footer>
-      <a href="#">Homepage</a>
+      <a href="/index.html">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
     </footer>
