--- a/photo.html
+++ b/photo.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Photo</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <h1>Croiisant🥐</h1>
-    <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
-    </p>
+    <h1>Picture of Croissant🥐</h1>
+    <figure>
+      <img
+        src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg"
+        alt=""
+      />
+    </figure>
     <footer>
-      <a href="#">Homepage</a>
+      <a href="/index.html">Homepage</a>
       <a href="/photo.html">Photo</a>
       <a href="/contact.html">Contact</a>
     </footer>
