--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Web page about croissant" />
-    <title>Croissant</title>
+    <title>Croissant. Just try it</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
